Minor style changes to filter dropdown

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="my-books" class=pane>
                 <h2 id="my-books-h">My Books</h2>
                 <button id="add-book">+</button>
-                <label for="filter"> Filter:</label>
+                <label for="filter" id="filter-label"> Filter:</label>
                 <select name="filter" id="filter">
                     <option value="all">All</option>
                     <option value="unread">Unread</option>
