--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <title>Lena's Library Logger</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style/reset.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style/style.css" rel="stylesheet" type="text/css" media="all">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     </head>
     <body>
